# notecharts

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yaml
examples/: force-directed-graph.ipynb  geo.ipynb  line-bar.ipynb  radar.ipynb  scatter-3D.ipynb
notecharts/: __init__.py  _codec.py  _fonts.py  _serialize.py  chart.html  chart.js  chart.py  charts.py  option.py  options.py  palette.py  widget.js  widget.py
notecharts/templates/: bar.py  graph.py  line.py  pie.py  radar.py  scatter.py  utils.py
