[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notecharts"
version = "0.3.0"
description = "Light-weight wrapper bringing modern, interactive charts to Jupyter with Apache ECharts"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Danish Munib", email = "danishmunibcontact@gmail.com"},
]
keywords = ["echarts", "jupyter", "visualization", "charts", "notebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = [
    "IPython",
    "palettable"
]

[project.urls]
Homepage = "https://github.com/dmunish/notecharts"
Repository = "https://github.com/dmunish/notecharts.git"
Issues = "https://github.com/dmunish/notecharts/issues"

[tool.setuptools.packages.find]
include = ["notecharts*"]